--- a/appfrontend/package.json
+++ b/appfrontend/package.json
@@ -13,6 +13,8 @@
   },
   "main": "dist-electron/main.js",
   "dependencies": {
+    "@livekit/components-react": "^2.9.14",
+    "@livekit/components-styles": "^1.1.6",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
@@ -21,13 +23,15 @@
     "clsx": "^2.1.1",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.12",
+    "jwt-decode": "^4.0.0",
+    "livekit-client": "^2.15.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "peerjs": "^1.5.5",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
@@ -38,7 +42,7 @@
     "@types/node": "^20",
     "@types/peerjs": "^0.0.30",
     "@types/react": "^19.1.12",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^19.1.9",
     "concurrently": "^9.2.0",
     "electron": "^37.2.1",
     "eslint": "^9",
@@ -46,7 +50,7 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "wait-on": "^8.0.3"
   }
 }
