feat: Update dependencies and add new features for backend and frontend
- Updated `livekit-client` to version 2.15.7 and added `livekit-server-sdk` to package.json.
- Introduced `js-cookie` for better cookie management in frontend.
- Created a new Dockerfile for the backend service to streamline the build process.
- Added a new `.env.docker` file for environment variables in Docker.
- Refactored database connection settings in `app.module.ts` to use environment variables.
- Implemented cookie-based authentication in `auth.controller.ts` for improved security.
- Enhanced JWT strategy to support token extraction from cookies.
- Added new DTO field `noOfStudent` in `create-meeting.dto.ts`.
- Updated `meetings.controller.ts` to handle user identity and display name more gracefully.
- Created Docker Compose files for setting up PostgreSQL, Redis, and LiveKit services.
- Added a Python deepfake detection service with FastAPI and integrated it into the Docker setup.
- Implemented logging in the deepfake service for better error tracking.
- Added test scripts for LiveKit token generation and WebSocket connectivity.
- Created batch scripts for starting and debugging services easily.n

--- a/backend/backend/package.json
+++ b/backend/backend/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "form-data": "^4.0.4",
     "livekit-server-sdk": "^2.13.3",
     "multer": "^2.0.2",
