--- a/appfrontend/package.json
+++ b/appfrontend/package.json
@@ -23,8 +23,10 @@
     "clsx": "^2.1.1",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "livekit-client": "^2.15.6",
+    "livekit-client": "^2.15.7",
+    "livekit-server-sdk": "^2.13.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/peerjs": "^0.0.30",
     "@types/react": "^19.1.12",
