--- a/livekit-fixed.yaml
+++ b/livekit-fixed.yaml
@@ -9,19 +9,21 @@ redis:
 
 rtc:
   tcp_port: 7881
-  port_range_start: 50201
-  port_range_end: 50220
-  use_external_ip: true
-  node_ip: auto
+  port_range_start: 50000
+  port_range_end: 50010
+  use_external_ip: false
+  node_ip: 127.0.0.1
+  stun_servers:
+    - stun.l.google.com:19302
+    - stun1.l.google.com:19302
 
 turn:
-  enabled: true
-  domain: 192.168.137.1
-  udp_port: 3478
-  # tls_port: 5349
-
+  enabled: false
 
 room:
   auto_create: true
   empty_timeout: 300
   departure_timeout: 20
+  
+webhook:
+  api_key: avinashashokshettyandchatgptpartnership
